plugins {
    id 'java'
    id 'application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

// Define paths for Bitcoin Core
def bitcoinCoreDir = file("${project.projectDir}/bitcoinkernel/bitcoin")
def bitcoinBuildDir = file("${bitcoinCoreDir}/build")
def bitcoinKernelHeader = file("${bitcoinCoreDir}/src/kernel/bitcoinkernel.h")

// Task to build Bitcoin Core with kernel library
tasks.register('buildBitcoinCore', Exec) {
    workingDir bitcoinCoreDir

    // Configure Bitcoin Core build
    commandLine 'cmake', '-B', 'build',
            '-DBUILD_KERNEL_LIB=ON',
            '-DBUILD_UTIL_CHAINSTATE=ON'

    // Only run if build directory doesn't exist or header has changed
//    inputs.file bitcoinKernelHeader
//    inputs.dir "${bitcoinCoreDir}/src"
//    outputs.dir bitcoinBuildDir
}

// Task to compile the built Bitcoin Core
tasks.register('compileBitcoinCore', Exec) {
    dependsOn buildBitcoinCore
    workingDir bitcoinCoreDir

    // todo: add more robust approach here for compiling parallelly, for now I have kept it low(we can use nproc here but it crashes my machine)
    commandLine 'cmake', '--build', 'build', '-j4'

//    inputs.dir bitcoinBuildDir
//    outputs.files(
//            "${bitcoinBuildDir}/src/kernel/libbitcoinkernel.so",
//    )
}
compileBitcoinCore.dependsOn(buildBitcoinCore)

// Configure source sets
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}

application {
    mainClass = "org.bitcoinkernel.TestKernel"
    applicationDefaultJvmArgs = [
            "--enable-native-access=ALL-UNNAMED"
    ]
}

// Ensure proper build order
compileJava.dependsOn compileBitcoinCore